tests/compile/userdata_meta_owned_self.stderr
error: meta methods cannot take `self`, use `&[mut] self` instead
 --> tests/compile/userdata_meta_owned_self.rs:7:5
  |
7 |     fn __gc(self) -> mlua::Result<()> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
